try to fix the button size on mobile

--- a/style.css
+++ b/style.css
@@ -182,10 +182,10 @@ p {
     }
 
     .btn {
-        height: 3em;
+        height: 2em;
         font-family: var(--font-f1);
-        font-size: 2em;
-        margin: 10% 10% 10% 0%;
+        font-size: 1.5em;
+        margin: 15% 15% 15% 0%;
         border-radius: 2em;
     }
 
